[tool.poetry]
name = "orgtreepubsub"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
boto3 = "^1.23.8"
boto3-stubs = "^1.23.8"
mypy-boto3-organizations = "^1.23.0"
PyPubSub = "^4.0.3"
networkx = "^2.8.2"
matplotlib = "^3.5.2"
pydot = "^1.4.2"
pandastable = "^0.13.0"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
